--- a/SamuraiApp.Data/SamuraiApp.Data.csproj
+++ b/SamuraiApp.Data/SamuraiApp.Data.csproj
@@ -16,6 +16,9 @@
 	  
 	  
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
+	  
+	  
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
